[package]
name = "axum-test-helper"
version = "0.3.0"
edition = "2021"
categories = ["development-tools::testing"]
description = "🧪 Test client for axum coppied from axum"
keywords = ["axum", "test", "test-framework"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/cloudwalk/axum-test-helper"

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.11", features = ["json", "multipart"], default-features = false}
http = "1.0"
bytes = "1.4.0"
tower = "0.4.13"
tower-service = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = "1"
futures-util = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing = "0.1.40"
serde_json = "1.0"

[features]
default = ["withtrace"]
cookies = ["reqwest/cookies"]
withtrace = []
withouttrace = []
